update report example

--- a/data/examples_report/html/5/maps.html
+++ b/data/examples_report/html/5/maps.html
@@ -26,14 +26,14 @@ jQuery(document).ready(function()
 <div class="bs-callout bs-callout-info" id="callout-helper-context-color-specificity">
     <h4>Positions on genome</h4><br>
     <p><UL>
- <LI>78 10 5895690 5895746 - 11
+ <LI>221 GL000220.1_116564_116589 0 25 + 16
+ <LI>222 GL000220.1_160536_160561 0 25 + 16
 </UL>
 </p>
 </div>
 <div class="bs-callout bs-callout-info" id="callout-helper-context-color-specificity">
     <h4>Annotation</h4><br>
     <p><UL>
- <LI>chr10.tRNA6-ValTAC
 </UL>
 </p>
 </div>
@@ -73,7 +73,14 @@ jQuery(document).ready(function()
   <th>pc5</th>
  </tr>
 </thead><tbody> <tr>
-  <td>GTGGTTATCACATCTGCTTT</td>
+  <td>CGGGGGGCCGGCGGCGGCGGCG</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>21.0</td>
   <td>0.0</td>
   <td>0.0</td>
   <td>0.0</td>
@@ -87,9 +94,210 @@ jQuery(document).ready(function()
   <td>0.0</td>
   <td>0.0</td>
   <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+ </tr>
+ <tr>
+  <td>GGGGCCGGCGGCGGCGGCGAC</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>49.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+ </tr>
+ <tr>
+  <td>GGGGCCGGCGGCGGCGGCGA</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>19.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+ </tr>
+ <tr>
+  <td>GGGGGCCGGCGGCGGCGGCG</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>27.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+ </tr>
+ <tr>
+  <td>CGGGGGGCCGGCGGCGGCGGCGA</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>21.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+ </tr>
+ <tr>
+  <td>CGGGGGGCCGGCGGCGGCGGCGACT</td>
+  <td>0.0</td>
+  <td>27.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>9.0</td>
+  <td>0.0</td>
+  <td>271.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>9.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+ </tr>
+ <tr>
+  <td>GGGGGGCCGGCGGCGGCGGCGA</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>57.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+ </tr>
+ <tr>
+  <td>GGGGGCCGGCGGCGGCGGCGACT</td>
+  <td>0.0</td>
+  <td>34.0</td>
   <td>0.0</td>
   <td>0.0</td>
   <td>5.0</td>
+  <td>8.0</td>
+  <td>385.0</td>
   <td>0.0</td>
   <td>0.0</td>
   <td>0.0</td>
@@ -102,216 +310,194 @@ jQuery(document).ready(function()
   <td>0.0</td>
   <td>0.0</td>
   <td>0.0</td>
- </tr>
- <tr>
-  <td>GTGGTTATCACATCTGCTTTAC</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>35.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
- </tr>
- <tr>
-  <td>GGTTCCATAGTGTAGTGGTTATCACATCTGCT</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>10.0</td>
-  <td>39.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>40.0</td>
-  <td>0.0</td>
-  <td>31.0</td>
-  <td>0.0</td>
- </tr>
- <tr>
-  <td>TTCCATAGTGTAGTGGTTATCACATCTGCTTTAC</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>16.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>106.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
- </tr>
- <tr>
-  <td>GGTTCCATAGTGTAGTGGTTATCACATCTGCTTT</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>11.0</td>
-  <td>9.0</td>
-  <td>31.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>20.0</td>
   <td>0.0</td>
   <td>17.0</td>
-  <td>20.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+ </tr>
+ <tr>
+  <td>GGGGGGCCGGCGGCGGCGGCG</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>78.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+ </tr>
+ <tr>
+  <td>GGGGGGCCGGCGGCGGCGGCGAC</td>
+  <td>0.0</td>
+  <td>23.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>159.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+ </tr>
+ <tr>
+  <td>CGGGGGGCCGGCGGCGGCGGCGAC</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>28.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+ </tr>
+ <tr>
+  <td>GGGGGCCGGCGGCGGCGGCGAC</td>
+  <td>0.0</td>
+  <td>17.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>82.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+ </tr>
+ <tr>
+  <td>GGGGGGCCGGCGGCGGCGGCGACA</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>19.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+ </tr>
+ <tr>
+  <td>GGGGGGCCGGCGGCGGCGGCGACT</td>
+  <td>0.0</td>
+  <td>70.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>9.0</td>
+  <td>31.0</td>
+  <td>1120.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
   <td>26.0</td>
-  <td>14.0</td>
- </tr>
- <tr>
-  <td>GTGGTTATCACATCTGCTT</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>6.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>16.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
- </tr>
- <tr>
-  <td>GGTTCCATAGTGTAGTGGTTATCACATCTGCTTTA</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>35.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
- </tr>
- <tr>
-  <td>GGTTCCATAGTGTAGTGGTTATCACATC</td>
-  <td>13.0</td>
-  <td>0.0</td>
-  <td>17.0</td>
-  <td>19.0</td>
-  <td>4.0</td>
-  <td>8.0</td>
-  <td>0.0</td>
-  <td>31.0</td>
-  <td>65.0</td>
-  <td>41.0</td>
-  <td>40.0</td>
-  <td>0.0</td>
-  <td>33.0</td>
-  <td>18.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
-  <td>0.0</td>
   <td>0.0</td>
   <td>0.0</td>
   <td>0.0</td>
@@ -321,19 +507,19 @@ jQuery(document).ready(function()
   <td>0.0</td>
  </tr>
  <tr>
-  <td>TTCCATAGTGTAGTGGTTATCACATCTG</td>
+  <td>GGGGGCCGGCGGCGGCGGCGA</td>
   <td>0.0</td>
   <td>0.0</td>
   <td>0.0</td>
   <td>0.0</td>
   <td>0.0</td>
   <td>0.0</td>
+  <td>27.0</td>
   <td>0.0</td>
   <td>0.0</td>
   <td>0.0</td>
   <td>0.0</td>
   <td>0.0</td>
-  <td>62.0</td>
   <td>0.0</td>
   <td>0.0</td>
   <td>0.0</td>
@@ -352,7 +538,14 @@ jQuery(document).ready(function()
   <td>0.0</td>
  </tr>
  <tr>
-  <td>GGTTCCATAGTGTAGTGGTTATCACATCTGCTT</td>
+  <td>GGCCGGCGGCGGCGGCGACT</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>0.0</td>
+  <td>27.0</td>
   <td>0.0</td>
   <td>0.0</td>
   <td>0.0</td>
@@ -367,51 +560,13 @@ jQuery(document).ready(function()
   <td>0.0</td>
   <td>0.0</td>
   <td>0.0</td>
-  <td>14.0</td>
-  <td>15.0</td>
   <td>0.0</td>
   <td>0.0</td>
-  <td>8.0</td>
   <td>0.0</td>
-  <td>12.0</td>
   <td>0.0</td>
-  <td>10.0</td>
   <td>0.0</td>
-  <td>30.0</td>
-  <td>32.0</td>
-  <td>31.0</td>
-  <td>20.0</td>
- </tr>
- <tr>
-  <td>TAGTGGTTATCACATCTGCTT</td>
-  <td>18.0</td>
-  <td>17.0</td>
-  <td>19.0</td>
-  <td>15.0</td>
   <td>0.0</td>
-  <td>9.0</td>
   <td>0.0</td>
-  <td>20.0</td>
-  <td>0.0</td>
-  <td>46.0</td>
-  <td>29.0</td>
-  <td>0.0</td>
-  <td>11.0</td>
-  <td>0.0</td>
-  <td>11.0</td>
-  <td>25.0</td>
-  <td>50.0</td>
-  <td>0.0</td>
-  <td>8.0</td>
-  <td>20.0</td>
-  <td>25.0</td>
-  <td>11.0</td>
-  <td>16.0</td>
-  <td>0.0</td>
-  <td>34.0</td>
-  <td>43.0</td>
-  <td>0.0</td>
-  <td>21.0</td>
  </tr>
 </tbody></table></div>
 </html>
