--- a/data/examples_report/html/index.html
+++ b/data/examples_report/html/index.html
@@ -29,27 +29,15 @@ jQuery(document).ready(function()
  </tr>
 </thead><tbody> <tr>
   <td><a href=1/maps.html>1</a></td>
-  <td>ncRNA:microRNA_30c-1, microRNA_30c-2</td>
+  <td>miRNA:microRNA_30c-1, microRNA_30c-2</td>
  </tr>
  <tr>
   <td><a href=3/maps.html>3</a></td>
-  <td>ncRNA:chr6.tRNA136-ValAAC, chr3.tRNA2-ValAAC, chr1.tRNA98-ValCAC, chr6.tRNA139-ValAAC, chr5.tRNA2-ValCAC, chr1.tRNA90-ValCAC</td>
- </tr>
- <tr>
-  <td><a href=2/maps.html>2</a></td>
-  <td>&nbsp;</td>
- </tr>
- <tr>
-  <td><a href=5/maps.html>5</a></td>
-  <td>ncRNA:chr10.tRNA6-ValTAC</td>
+  <td>tRNA:chrX.tRNA4-ValTAC</td>
  </tr>
  <tr>
   <td><a href=4/maps.html>4</a></td>
-  <td>ncRNA:chrX.tRNA4-ValTAC</td>
- </tr>
- <tr>
-  <td><a href=6/maps.html>6</a></td>
-  <td>&nbsp;</td>
+  <td>tRNA:chr6.tRNA136-ValAAC, chr3.tRNA2-ValAAC, chr1.tRNA98-ValCAC, chr6.tRNA139-ValAAC, chr5.tRNA2-ValCAC, chr1.tRNA90-ValCAC</td>
  </tr>
 </tbody></table>
 </div>
